--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
+            <version>5.1.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
